# ChangeLog for dev-php5/suhosin
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-php5/suhosin/Attic/ChangeLog,v 1.1 2007/03/04 19:02:59 chtekk Exp $

*suhosin-0.9.16 (04 Mar 2007)

  04 Mar 2007; Luca Longinotti <chtekk@gentoo.org> +metadata.xml,
  +suhosin-0.9.16.ebuild:
  Add Suhosin.
