@@ -1,16 +1,16 @@
-DIST suhosin-0.9.16.tgz 102582 RMD160 3d70b08bc7ee397477892719971d13cbe2e82e97 SHA1 c0b1e92ba7a60853775e2441159f23af36d73c75 SHA256 a30b7b9263e94ce95bc4be00fb224ed32e59db071578c9fcbb7105923c6cd5f5
-EBUILD suhosin-0.9.16.ebuild 6274 RMD160 a2d81eeee05a66bdbdb431cbfc836a3a0bf0b3a6 SHA1 1bc369f57e970db30753d0dbbaf0037d59ae55c7 SHA256 02eebf374595e57266716ccf46ea1674089dd6bda09bf1eb04d8fd6d59be60ae
-MD5 18250e7871533e0aa367e6511a228140 suhosin-0.9.16.ebuild 6274
-RMD160 a2d81eeee05a66bdbdb431cbfc836a3a0bf0b3a6 suhosin-0.9.16.ebuild 6274
-SHA256 02eebf374595e57266716ccf46ea1674089dd6bda09bf1eb04d8fd6d59be60ae suhosin-0.9.16.ebuild 6274
-MISC ChangeLog 344 RMD160 665821f54c61ca4623cb9337639d0bb8d03b55cc SHA1 83d2a7f919c0807639e68d702af0661d5d79eab0 SHA256 8bbcb338ab9f76e6f18fa2006ed1d5615eee621b6187a121ad706c577410a09d
-MD5 869b9ef53da568efed61ef436cc9ed19 ChangeLog 344
-RMD160 665821f54c61ca4623cb9337639d0bb8d03b55cc ChangeLog 344
-SHA256 8bbcb338ab9f76e6f18fa2006ed1d5615eee621b6187a121ad706c577410a09d ChangeLog 344
+DIST suhosin-0.9.17.tgz 110324 RMD160 550928d91321239c2a0b9c9870ef866d388f6baa SHA1 0c572aefeef730f509330fb07a44edcf9b0d4cc8 SHA256 3d53c40ba845b187f343c22f405f802842e3e2fb753734b53af310942a20f3a0
+EBUILD suhosin-0.9.17.ebuild 903 RMD160 b05cddb86a5a7fbc8568efec1c1c1f1962020474 SHA1 d2e250e39ed91df5914e9d9d3e9d303fff074ed4 SHA256 c23b1b276f3945194d61a291f7b33e270b1ce55fcfbc29600b54e91a0350f930
+MD5 6f440ad4b3274b2b9609a3e04c145914 suhosin-0.9.17.ebuild 903
+RMD160 b05cddb86a5a7fbc8568efec1c1c1f1962020474 suhosin-0.9.17.ebuild 903
+SHA256 c23b1b276f3945194d61a291f7b33e270b1ce55fcfbc29600b54e91a0350f930 suhosin-0.9.17.ebuild 903
+MISC ChangeLog 493 RMD160 4f2994e0a9e2f13492988640d66160102e490101 SHA1 977ed8f3b5f901e37024e83be08a28fbc2004f06 SHA256 955d7a77d7590fef3b9b523aa3f80079a70f1fc05d8b9d1f32dd30c8e0e6c4bd
+MD5 6e0676998601fb5fbea8499ee254d01b ChangeLog 493
+RMD160 4f2994e0a9e2f13492988640d66160102e490101 ChangeLog 493
+SHA256 955d7a77d7590fef3b9b523aa3f80079a70f1fc05d8b9d1f32dd30c8e0e6c4bd ChangeLog 493
 MISC metadata.xml 157 RMD160 a98db3a086fae3c09a903dadbc05f60443ec4b1a SHA1 ddaa23cc35eb917bf8962b652442bebb1ce0f440 SHA256 54f8878ca0228e380abbaa4b529806b5533a6b9b51b3b16c0909e906586a91a1
 MD5 c58d07ca1c1235bbad9bccaec96fc062 metadata.xml 157
 RMD160 a98db3a086fae3c09a903dadbc05f60443ec4b1a metadata.xml 157
 SHA256 54f8878ca0228e380abbaa4b529806b5533a6b9b51b3b16c0909e906586a91a1 metadata.xml 157
-MD5 cc171b17849dc772e5b75efa6d9e7ddd files/digest-suhosin-0.9.16 235
-RMD160 129bd51f4265964ad16545308a77f8b8e71a27e5 files/digest-suhosin-0.9.16 235
-SHA256 32e76ebe2b1e8871b0021b4129ab104844234b8ff3ab9241e59cc22f4f52e8cc files/digest-suhosin-0.9.16 235
+MD5 d0df00e98817ffed22d51afde0f3fbf4 files/digest-suhosin-0.9.17 235
+RMD160 705a7284a3a0173190ddbf10523ecea8446e1945 files/digest-suhosin-0.9.17 235
+SHA256 c40ef892bde69f9b79b4b5ca79bdad0ab3ad30d4e4321ceff86ab0ad7c97ef48 files/digest-suhosin-0.9.17 235
