@@ -1,3 +1,0 @@
-MD5 83db16381732218d0d44fe60988dcaaa suhosin-0.9.16.tgz 102582
-RMD160 3d70b08bc7ee397477892719971d13cbe2e82e97 suhosin-0.9.16.tgz 102582
-SHA256 a30b7b9263e94ce95bc4be00fb224ed32e59db071578c9fcbb7105923c6cd5f5 suhosin-0.9.16.tgz 102582
