@@ -1,0 +1,3 @@
+MD5 5643f9b0267d4caafed2697986c21c89 suhosin-0.9.17.tgz 110324
+RMD160 550928d91321239c2a0b9c9870ef866d388f6baa suhosin-0.9.17.tgz 110324
+SHA256 3d53c40ba845b187f343c22f405f802842e3e2fb753734b53af310942a20f3a0 suhosin-0.9.17.tgz 110324
